fix bug with logo on mobile-adaptive markup

--- a/css/global.css
+++ b/css/global.css
@@ -52,6 +52,7 @@ button {
 @media (max-width: 768px) {
   .container .content {
     justify-content: center;
+    align-items: flex-start;
     gap: 0px;
   }
 }
@@ -64,13 +65,7 @@ button {
   .container .content .logo {
     left: 7%;
     top: 36px;
-  }
-}
-@media (max-width: 550px) {
-  .container .content .logo {
-    width: 76px;
-    left: 4%;
-    top: 30px;
+    display: none;
   }
 }
 .container .content .video {
@@ -85,6 +80,16 @@ button {
 }
 .container .content .rigth {
   width: 336px;
+}
+.container .content .rigth .logo-mobile {
+  display: none;
+}
+@media (max-width: 768px) {
+  .container .content .rigth .logo-mobile {
+    display: block;
+    width: 76px;
+    margin: 36px 0px 50px 0px;
+  }
 }
 @media (max-width: 768px) {
   .container .content .rigth {
