--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,6 +42,7 @@ button{
         }
         @media (max-width: 768px) {
             justify-content: center;
+            align-items: flex-start;
             gap: 0px;   
         }
         .logo{
@@ -51,11 +52,7 @@ button{
             @media (max-width: 768px) {
                 left: 7%;
                 top: 36px;
-            }
-            @media (max-width: 550px) {
-                width: 76px;
-                left: 4%;
-                top: 30px;
+                display: none;
             }
         }
         .video{
@@ -68,6 +65,14 @@ button{
         }
         .rigth{
             width: 336px;
+            .logo-mobile{
+                display: none;
+                @media (max-width: 768px) {
+                    display: block;
+                    width: 76px;
+                    margin: 36px 0px 50px 0px;
+                }
+            }
             @media (max-width: 768px) {
                 width: calc(100% - 100px);
             }
